# nppilot

./: .gitignore  .gitmodules  HACKING  Makefile  Makefile.am  NOTES  README  blink.c  configure.ac  flash.ld  opuploadtool.mk
bootloader/: ATmegaBOOT_168.c  Makefile
etc/: openocd-stm32-signalyzer-lite.cfg
experiments/: blink.c  gps.go  link.go  link.py
lib/: bitarray.h  blinker.cc  blinker.h  cobs.cc  cobs.h  debug.cc  debug.h  ringbuffer.h  switch.cc  switch.h  switcher.cc  switcher.h  timer.cc  timer.h  usblink.h
platform/h103/: flash.ld
platform/posix/: bitarray.cc  timer.cc  usblink.cc
platform/stm32/: bitarray.cc  start.cc  timer.cc  usblink.cc  vectors.h
rover/: Makefile  rover.go
rover/src/juju.net.nz/config/: config.go  config_test.go
rover/src/juju.net.nz/mathex/: clip.go  clip_test.go
rover/src/juju.net.nz/nppilot/rover/: controller.go  driver.go  heading.go  heading_test.go  jog.go  latlon.go  latlon_test.go  pid.go  pid_test.go  point.go  recorder.go  rot.go  rover.go  speed.go  supervisor.go  sysident.go  timeout.go  utm.go  utm_test.go  watchdog.go  waypoint.go  waypoint_test.go
rover/src/juju.net.nz/nppilot/rover/button/: button.go
rover/src/juju.net.nz/nppilot/rover/gps/: gps.go
rover/src/juju.net.nz/nppilot/rover/link/: frame.go  link.go
rover/src/juju.net.nz/testex/: testex.go
roverif/: Makefile  NOTES  blinker.cc  blinker.h  board.h  hal-atmega168.cc  hal-coptercontrol.cc  hal-posix.cc  hal.h  imu.cc  imu.h  init.cc  link.cc  link.h  main.cc  minbitarray.cc  minbitarray.h  protocol.h  pwmin.cc  pwmin.h  roverif.h  servos.cc  servos.h  start.cc  supervisor.cc  supervisor.h
roverif/stm32/: start.cc
src/: main.cc  protocol.h
tests/: test_bitarray.h  test_blinker.h  test_cobs.h  test_debug.h  test_ringbuffer.h  test_switch.h  test_switcher.h
tools/: doxygen.dox  reboot.py
